--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,26 @@
-<div>
-  <h1 class="font-bold text-4xl">Events#index</h1>
-  <p>Find me in app/views/events/index.html.erb</p>
-</div>
+
+  <table class="table">
+    <% @events.each_with_index do |event, index| %>
+      <tr>
+        <td>
+    <div class=" mx-auto bg-white rounded-xl shadow-md overflow-hidden  m-3">
+
+    <div class="md:flex">
+        <div class="md:flex-shrink-0">
+        <img class=" object-cover md:w-48" src="<%= event.image_url %>" alt="Doctor's image">
+        </div>
+        <div class="p-8">
+        <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold"><%= event.name  %></div>
+        <p class="block mt-1 text-lg leading-tight font-medium text-black"><%= event.venue.name %></p>
+        <p class="mt-2 text-gray-500"><%= event.date_time.strftime("%a · %b %d · %I:%M %p") %></p>
+        <button class="mt-5 px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white">
+          <%= link_to 'More Info', event, style: 'text-decoration: none; color: white;' %>
+        </button>
+
+        </div>
+    </div>
+    </div>
+        </td>
+      </tr>
+    <% end %>
+  </table>
