--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
     <nav class="w-screen bg-teal-500 h-fit overflow-hidden">
         <div class="py-4 lg:px-8 px-4 max-w-[1280px] h-16 m-auto text-white flex items-center justify-between">
             <div>
-              <h1 class="lg:text-2xl text-xl uppercase tracking-wider cursor-pointer font-bold text-white">Event Tickets</h1>
+              <%= link_to root_path do %>
+                <h1 class="lg:text-2xl text-xl uppercase tracking-wider cursor-pointer font-bold text-white">Event Tickets</h1>
+              <% end %>
             </div>
             <div class="flex lg:gap-8 gap-6 uppercase tracking-wider cursor-pointer text-lg items-center" id="navItems">
               <span class="group">
