--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,31 @@
-<div>
-  <h1 class="font-bold text-4xl">Artists#index</h1>
-  <p>Find me in app/views/artists/index.html.erb</p>
-</div>
+<!-- app/views/artists/index.html.erb -->
+
+<h1 class="text-2xl font-bold mb-4">All Artists</h1>
+
+<% if @artists.any? %>
+  <table class="table-auto w-full border-collapse border border-gray-200">
+    <thead>
+      <tr class="bg-gray-100">
+        <th class="border border-gray-300 px-4 py-2">Attraction Name</th>
+        <th class="border border-gray-300 px-4 py-2">Events Available</th>
+        <th class="border border-gray-300 px-4 py-2">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @artists.each do |artist| %>
+        <tr>
+          <td class="border border-gray-300 px-4 py-2"><%= artist.name %></td>
+          <td class="border border-gray-300 px-4 py-2"><%= artist.events.count %></td>
+          <td class="border border-gray-300 px-4 py-2">
+            <%= link_to 'Show', artist_path(artist), class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= will_paginate @artists %>
+
+<% else %>
+  <p>No artists found.</p>
+<% end %>
