--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -7,14 +7,41 @@
 
 <p>
   <strong>Artist Link:</strong>
-  <%= @artist.url %>
+  <%= link_to @artist.url, @artist.url %>
 </p>
 
-<p>
-  <strong>Events:</strong>
-  <% @artist.events.each do |event| %>
-    <%= link_to event.name, event_path(event) %><br>
-  <% end %>
-</p>
+<h2>Events</h2>
+
+<% if @events.any? %>
+  <table class="table-auto w-full border-collapse border border-gray-200">
+    <thead>
+      <tr class="bg-gray-100">
+        <th class="border border-gray-300 px-4 py-2">Event Name</th>
+        <th class="border border-gray-300 px-4 py-2">Date and Time</th>
+        <th class="border border-gray-300 px-4 py-2">Location</th>
+        <th class="border border-gray-300 px-4 py-2">Category</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @events.each do |event| %>
+        <tr>
+          <td class="border border-gray-300 px-4 py-2"><%= link_to event.name, event_path(event) %></td>
+          <td class="border border-gray-300 px-4 py-2"><%= event.date_time.strftime('%B %d, %Y - %H:%M %p') %></td>
+          <td class="border border-gray-300 px-4 py-2"><%= event.venue.name %></td>
+          <td class="border border-gray-300 px-4 py-2">
+            <% event.classifications.each do |classification| %>
+              <%= "#{classification.segment} - #{classification.genre}" %><br>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= will_paginate @events %>
+
+<% else %>
+  <p>No events found for this artist.</p>
+<% end %>
 
 <%= link_to 'Back', artists_path %>
