--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,3 @@
-<!-- app/views/artists/index.html.erb -->
-
 <h1 class="text-2xl font-bold mb-4">All Artists</h1>
 
 <% if @artists.any? %>
@@ -17,7 +15,7 @@
           <td class="border border-gray-300 px-4 py-2"><%= artist.name %></td>
           <td class="border border-gray-300 px-4 py-2"><%= artist.events.count %></td>
           <td class="border border-gray-300 px-4 py-2">
-            <%= link_to 'Show', artist_path(artist), class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
+            <%= link_to 'Show Events', artist_path(artist), class: 'bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
           </td>
         </tr>
       <% end %>
