--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto max-w-screen-md px-4 py-8">
+<div class="container mx-auto max-w-screen-md">
   <% if @events.any? %>
     <table class="table">
       <% @events.each_with_index do |event, index| %>
