--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-2xl font-bold mb-4">All Artists</h1>
+<h1 class="font-bold text-4xl">ARTISTS</h1>
 
 <% if @artists.any? %>
   <table class="table-auto w-full border-collapse border border-gray-200">
