--- a/app/views/classifications/index.html.erb
+++ b/app/views/classifications/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-2xl font-bold mb-4">All Classifications</h1>
+<h1 class="font-bold text-4xl">CATEGORIES</h1>
 
 <% if @classifications.any? %>
   <div class="grid grid-cols-2 gap-4">
@@ -13,7 +13,7 @@
   <%= will_paginate @classifications %>
 
 <% else %>
-  <p>No classifications found.</p>
+  <p>No categories found.</p>
 <% end %>
 
 <%# <%= link_to 'Back', root_path, class: 'mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
