--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container mx-auto max-w-screen-md">
+  <h1 class="font-bold text-4xl">EVENTS</h1>
   <% if @events.any? %>
     <table class="table">
       <% @events.each_with_index do |event, index| %>
