--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-2xl font-bold mb-4">All Venues</h1>
+<h1 class="font-bold text-4xl">LOCATIONS</h1>
 
 <% if @venues.any? %>
   <table class="table-auto w-full border-collapse border border-gray-200">
