--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<div class="max-w-3xl mx-auto p-6 bg-gray-100 shadow-xl rounded-lg">
+<div class="max-w-3xl mx-auto p-6 bg-gray-100 shadow-xl rounded-lg  mb-20">
   
   <p id="notice" class="text-gray-600"><%= notice %></p>
 
