--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,5 @@
+<div>
 <h1 class="font-bold text-4xl">ARTISTS</h1>
-
 <% if @artists.any? %>
   <table class="table-auto w-full border-collapse border border-gray-200">
     <thead>
@@ -27,3 +27,4 @@
 <% else %>
   <p>No artists found.</p>
 <% end %>
+</div>
