--- a/app/views/classifications/index.html.erb
+++ b/app/views/classifications/index.html.erb
@@ -1,3 +1,4 @@
+<div>
 <h1 class="font-bold text-4xl">CATEGORIES</h1>
 
 <% if @classifications.any? %>
@@ -15,5 +16,5 @@
 <% else %>
   <p>No categories found.</p>
 <% end %>
-
+  </div>
 <%# <%= link_to 'Back', root_path, class: 'mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded' %>
