--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,3 +1,4 @@
+<div>
 <h1 class="font-bold text-4xl">LOCATIONS</h1>
 
 <% if @venues.any? %>
@@ -27,3 +28,4 @@
 <% else %>
   <p>No venues found.</p>
 <% end %>
+</div>
