--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -51,7 +51,7 @@
     </tbody>
   </table>
 
-  <%= will_paginate @events %>
+  <%= paginate @events %>
 
 <% else %>
   <p>No events found for this venue.</p>
