--- a/app/views/classifications/index.html.erb
+++ b/app/views/classifications/index.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="mb-10">
 <h1 class="font-bold text-4xl">CATEGORIES</h1>
 
 <% if @classifications.any? %>
@@ -11,7 +11,7 @@
     <% end %>
   </div>
 
-  <%= will_paginate @classifications %>
+  <%= paginate @classifications %>
 
 <% else %>
   <p>No categories found.</p>
