--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,15 +1,14 @@
-<div class="container mx-auto mt-8">
-<h1 class="text-2xl font-bold mb-4">
-  <% if params[:classification_id].present? %>
-    Search Results for '<%= @query %>' in the '<%= Classification.find(params[:classification_id]).genre %>' category
-  <% else %>
-    Search Results for '<%= @query %>'
-  <% end %>
-</h1>
-
+<div class="container mx-auto">
+  <h1 class="text-2xl font-bold mb-4">
+    <% if params[:classification_id].present? %>
+      Search Results for '<%= @query %>' in the '<%= Classification.find(params[:classification_id]).genre %>' category
+    <% else %>
+      Search Results for '<%= @query %>'
+    <% end %>
+  </h1>
 
   <% if @events.any? %>
-    <p>Your search found <%= @events.total_entries %> events.</p>
+    <p>Your search found <%= @events.total_count %> events.</p>
     <ul class="mt-4">
       <% @events.each do |event| %>
         <li>
@@ -17,6 +16,9 @@
         </li>
       <% end %>
     </ul>
+    <div class="flex justify-left">
+      <%= paginate @events %>
+    </div>
   <% else %>
     <p>No events found.</p>
   <% end %>
