added active storage

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -46,3 +46,6 @@
     <p><strong>Price Range:</strong> <%= number_to_currency(@event.min_price) %> - <%= number_to_currency(@event.max_price) %></p>
   </div>
 </div>
+<div>
+  <%= link_to 'Go Back', events_path, class: "text-sm text-blue-500" %>
+</div>
