modified about page to correspond with changes made to models

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,18 +37,19 @@
         </span>
         <span class="group">
           <%= link_to 'Categories', classifications_path, style: 'text-decoration: none; color: white;' %>
-        </span>
+        </span>    
         <span class="group">
           <%= link_to 'About', about_path, style: 'text-decoration: none; color: white;' %>
          </span>
+        <span class="group">
+            <%= link_to 'Admin', admin_root_path, style: 'text-decoration: none; color: white;' %>
+        </span>
+    
           <div class="hidden sm:block flex-shrink flex-grow-0 justify-start px-2">
             <%= form_with(url: search_path, method: "get", local: false, class: "inline-block") do %>
               <div class="inline-flex items-center max-w-full">
                 <%= text_field_tag :query, params[:query], placeholder: "Start your search", class: "block flex-grow flex-shrink overflow-hidden border border-gray-300 rounded-l-md px-4 py-2 text-sm leading-tight focus:outline-none focus:border-gray-400 text-gray-900", style: "padding-left: 0.5rem; width: 16rem;" %>
-                
-                <!-- Dropdown for classification -->
                 <%= select_tag :classification_id, options_for_select(Classification.all.map { |c| [c.genre, c.id] }, params[:classification_id]), include_blank: 'All Categories', class: "block ml-2 appearance-none border border-gray-300 rounded-r-md px-4 py-2 bg-white text-gray-700 text-sm leading-tight focus:outline-none focus:border-gray-400", style: "min-width: 10rem;" %>
-                
                 <button type="submit" class="flex items-center justify-center relative h-8 w-8 rounded-full border border-transparent bg-white hover:bg-gray-100 ml-2">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false" style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                     <g fill="none">
